overflow fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,8 @@
 } */
 
 body {
+  max-width: 100dvw !important;
+  overflow-x: hidden !important;
   * {
     box-sizing: border-box;
     transition: 0.1s;
